# k3s-cellular-automaton

./: .gitignore  Makefile  project_concept.md
.agent/rules/: 01-infrastructure_rules.md
.github/workflows/: build.yaml
cells-worker/: Cargo.toml  Dockerfile  build.rs
cells-worker/src/: main.rs
dashboard-ui/: .gitignore  Dockerfile  package-lock.json  package.json
dashboard-ui/src/: App.tsx
grid-controller/: Dockerfile  go.mod  go.sum  main.go
grid-controller/proto/: cell.pb.go  cell_grpc.pb.go
k8s/: cells.yaml  infra.yaml  ingress.yaml  namespace.yaml
proto/: cell.proto
